2009-01-09  Benjamin Otte  <otte@gnome.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=23194

        Remove broken code that uses a fallback. The previous code did 2
        policy decisions which caused crashes.
        Download is still notImplemented();

        * webkit/webkitwebpolicydecision.cpp:
        (_WebKitWebPolicyDecisionPrivate::webkit_web_policy_decision_download):

2009-01-03  Xan Lopez  <xan@gnome.org>

        Reviewed by Holger Freyther.

        [GTK] Need a public method to reload view bypassing cache
        https://bugs.webkit.org/show_bug.cgi?id=19815

        * webkit/webkitwebview.cpp:
        * webkit/webkitwebview.h:

        Add webkit_web_view_reload_bypass_cache.

2009-01-07  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Maciej Stachowiak.

        Add private API to get the number of active animations of
        a frame. This is required by the DumpRenderTree utility.

        * webkit/webkitprivate.h:
        * webkit/webkitwebframe.cpp:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Fix build

        * WebCoreSupport/ChromeClientGtk.h:

2009-01-05  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Build fix for contentsSizeChanged

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::contentsSizeChanged):
        * WebCoreSupport/ChromeClientGtk.h:

2009-01-04  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos.

        Make the gtk port build with the new fixedLayoutSize feature

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::transitionToCommittedForNewPage):

2009-01-03  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Darin Adler.

        [GTK] Fix the reference counting of WebKitWebFrames
        
        The ownership is the following: WebKitWebView owns a WebCore::Page.